Response fixes
