# docs/swagger.json
@@ -37,25 +37,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.ServerGoodResponse"
+                            "$ref": "#/definitions/responses.ServerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/responses.ServerError"
+                            "$ref": "#/definitions/responses.ServerResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/responses.ServerError"
+                            "$ref": "#/definitions/responses.ServerResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/responses.ServerError"
+                            "$ref": "#/definitions/responses.ServerResponse"
                         }
                     }
                 }
@@ -89,25 +89,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.ServerGoodResponse"
+                            "$ref": "#/definitions/responses.ServerResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/responses.ServerError"
+                            "$ref": "#/definitions/responses.ServerResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/responses.ServerError"
+                            "$ref": "#/definitions/responses.ServerResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/responses.ServerError"
+                            "$ref": "#/definitions/responses.ServerResponse"
                         }
                     }
                 }
@@ -158,18 +158,7 @@
                 }
             }
         },
-        "responses.ServerError": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "responses.ServerGoodResponse": {
+        "responses.ServerResponse": {
             "type": "object",
             "properties": {
                 "msg": {},
