# internal/domain/responses/responses.go
@@ -1,25 +1,13 @@
 package responses
 
-type ServerError struct {
-	Success bool   `json:"success"`
-	Error   string `json:"error"`
-}
-
-type ServerGoodResponse struct {
+type ServerResponse struct {
 	Success bool        `json:"success"`
 	Msg     interface{} `json:"msg"`
 }
 
-func NewServerError(err string) *ServerError {
-	return &ServerError{
-		Success: false,
-		Error:   err,
-	}
-}
-
-func NewServerGoodResponse(msg interface{}) *ServerGoodResponse {
-	return &ServerGoodResponse{
-		Success: true,
+func NewServerResponse(success bool, msg interface{}) *ServerResponse {
+	return &ServerResponse{
+		Success: success,
 		Msg:     msg,
 	}
 }
