# internal/handler/auth_handler.go
@@ -15,31 +15,31 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        input body domain.User true "User info"
-// @Success      200  {object}  responses.ServerGoodResponse
-// @Failure      400  {object}  responses.ServerError
-// @Failure      404  {object}  responses.ServerError
-// @Failure      500  {object}  responses.ServerError
+// @Success      200  {object}  responses.ServerResponse
+// @Failure      400  {object}  responses.ServerResponse
+// @Failure      404  {object}  responses.ServerResponse
+// @Failure      500  {object}  responses.ServerResponse
 // @Router       /auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	json := domain.User{}
 	if err := c.ShouldBindJSON(&json); err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, responses.NewServerError(err.Error()))
+		c.AbortWithStatusJSON(http.StatusBadRequest, responses.NewServerResponse(false, err.Error()))
 		return
 	}
 	simplePassword := json.PasswordHash
 	user, err := h.userService.CreateUser(&json)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerError(err.Error()))
+		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerResponse(false, err.Error()))
 		return
 	}
 
 	token, err := h.authorizationService.GenerateToken(json.Phone, simplePassword)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerError(err.Error()))
+		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerResponse(false, err.Error()))
 		return
 	}
 
-	c.JSON(http.StatusOK, responses.NewServerGoodResponse(map[string]interface{}{
+	c.JSON(http.StatusOK, responses.NewServerResponse(true, map[string]interface{}{
 		"user":  user,
 		"token": token,
 	}))
@@ -57,26 +57,26 @@ type signInInput struct {
 // @Accept       json
 // @Produce      json
 // @Param        input body signInInput true "User signIN info"
-// @Success      200  {object}  responses.ServerGoodResponse
-// @Failure      400  {object}  responses.ServerError
-// @Failure      404  {object}  responses.ServerError
-// @Failure      500  {object}  responses.ServerError
+// @Success      200  {object}  responses.ServerResponse
+// @Failure      400  {object}  responses.ServerResponse
+// @Failure      404  {object}  responses.ServerResponse
+// @Failure      500  {object}  responses.ServerResponse
 // @Router       /auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	json := signInInput{}
 	if err := c.ShouldBindJSON(&json); err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerError(err.Error()))
+		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerResponse(false, err.Error()))
 		return
 	}
 	token, err := h.authorizationService.GenerateToken(json.Phone, json.PasswordHash)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerError(err.Error()))
+		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerResponse(false, err.Error()))
 		return
 	}
 
 	userFull, err := h.userService.GetUserByPhone(json.Phone)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerError(err.Error()))
+		c.AbortWithStatusJSON(http.StatusInternalServerError, responses.NewServerResponse(false, err.Error()))
 		return
 	}
 	userResponse := domain.UserResponse{
@@ -87,7 +87,7 @@ func (h *Handler) signIn(c *gin.Context) {
 		Rating: userFull.Rating,
 	}
 
-	c.JSON(http.StatusOK, responses.NewServerGoodResponse(map[string]interface{}{
+	c.JSON(http.StatusOK, responses.NewServerResponse(true, map[string]interface{}{
 		"user":  userResponse,
 		"token": token,
 	}))
